[project]
name = "agentmemory"
version = "0.1.0"
description = "Production-grade plug-and-play memory for AI agents. Zero config, single-file storage, framework-agnostic."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-benchmark>=4.0"]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
