[project]
name = "remembox"
version = "0.2.1"
description = "Production-grade plug-and-play memory for AI agents. Zero config, single-file storage, framework-agnostic."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "cogynon", email = "cogynon@users.noreply.github.com" }]
keywords = ["llm", "agents", "memory", "ai", "vector-search", "memory-system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ipykernel>=7.3.0",
    "openai>=2.29.0",
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "python-dotenv>=1.2.2",
]
embeddings = ["sentence-transformers>=3.0"]

[project.urls]
Homepage = "https://github.com/cogynon/membox"
Repository = "https://github.com/cogynon/membox"
Issues = "https://github.com/cogynon/membox/issues"
Changelog = "https://github.com/cogynon/membox/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remembox"]

[tool.hatch.build.targets.sdist]
exclude = [
  ".env",
  ".venv",
  ".python-version",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
